@@ -11,7 +11,6 @@ default_manager = LanguageManager.get_default()
 LANGS = {
     ".rst": default_manager.get_language("rst"),
     ".md": default_manager.get_language("markdown"),
-    ".cm": default_manager.get_language("markdown"),  # parser compatibility
     ".m2r": default_manager.get_language("markdown"),  # parser compatibility
     ".html": default_manager.get_language("html"),
     ".htm": default_manager.get_language("html"),
