@@ -3,6 +3,7 @@ Changelog
 
 Version dev
   * code refactoring
+  * remove deprecated recommonmark
 
 
 Version 1.5.0
